Revert "cambios en el modelo ML, nuevo parametro 'resumen'"
This reverts commit 82749dc6b092c413bbdab3c6211a0ffb40b27607.

--- a/proyecto/frontend/index.html
+++ b/proyecto/frontend/index.html
@@ -254,21 +254,12 @@
             <label>Área <span class="required">*</span></label>
             <select id="area" required>
               <option value="">Seleccionar...</option>
-              <option>Analatica y Actuarial</option>
-              <option>Cobranzas</option>
-              <option>Operaciones</option>
-              <option>Comercial Masivos</option>
-              <option>Contabilidad</option>
-              <option>Cultura Organizacional</option>
-              <option>Marketing</option>
-              <option>Operaciones</option>
-              <option>Recepcion</option>
-              <option>Riesgos Operacionales</option>
-              <option>Servicio al Cliente</option>
               <option>Siniestros</option>
-              <option>Soluciones de Clientes</option> 
-              <option>Técnica</option>
-              <option>TI</option>
+              <option>Comercial</option>
+              <option>Operaciones</option>
+              <option>Tecnología</option>
+              <option>Finanzas</option>
+              <option>Recursos Humanos</option>
             </select>
           </div>
           <div class="form-group">
@@ -285,41 +276,9 @@
           </div>
         </div>
         <div class="form-group">
-        <label>Aplicativo</label>
-        <select id="aplicativo">
-          <option value="">Seleccionar...</option>
-          <option>BackOffice</option>
-          <option>C360</option>
-          <option>Chrome</option>
-          <option>Conciliaciones automáticas</option>
-          <option>Cotizador -> Accidentes Personales</option>
-          <option>Cotizador -> Vida Grupo</option>
-          <option>Cotizador -> Vida Ley</option>
-          <option>Ecommerce -> Accidentes Personales</option>
-          <option>Ecommerce -> SOAT</option>
-          <option>eFacturación</option>
-          <option>Exactus</option>
-          <option>Integrador</option>
-          <option>Net privada</option>
-          <option>OnBase</option>
-          <option>OnBase -> CxP Comisiones</option>
-          <option>Plataforma de consultas</option>
-          <option>Plataforma de Contratos</option>
-          <option>Plataforma de vida</option>
-          <option>Plataforma Digital</option>
-          <option>Plataforma Digital -> Comisiones</option>
-          <option>Plataforma Digital -> Interfaz Automática</option>
-          <option>Plataforma Digital -> PD - Accidentes Personales</option>
-          <option>Plataforma Digital -> PD - SCTR</option>
-          <option>Plataforma Digital -> PD - SOAT Digital</option>
-          <option>Plataforma Digital -> PD - Vida Grupo</option>
-          <option>Plataforma Digital -> PD - Vida Ley</option>
-          <option>Siniestros</option>
-          <option>SOAT</option>
-          <option>Tarifario -> Accidentes Personales</option>
-          <option>Visual Time</option>
-        </select>
-      </div>
+          <label>Aplicativo</label>
+          <input id="aplicativo" type="text" placeholder="Ej: Ecommerce SOAT, PAS, Portal Corredores..." />
+        </div>
 
         <!-- Informante -->
         <div class="section-label">Informante</div>
