--- a/proyecto/frontend/metricas.html
+++ b/proyecto/frontend/metricas.html
@@ -120,7 +120,7 @@
         </div>
 
         <!-- Gráficos 2x2 -->
-        <div style="display:grid; grid-template-columns:repeat(auto-fit,minmax(300px,1fr)); gap:1rem;">
+        <div style="display:grid; grid-template-columns: 1fr 1fr; gap:1.4rem;">
 
             <div class="card" style="padding:1rem;">
                 <div style="font-size:.82rem; font-weight:600; color:var(--text,#1e2a38); margin-bottom:.75rem;">
@@ -145,7 +145,7 @@
 
             <div class="card" style="padding:1rem;">
                 <div style="font-size:.82rem; font-weight:600; color:var(--text,#1e2a38); margin-bottom:.75rem;">
-                    Tiempo estimado (categorías)
+                    Tiempo estimado por producto
                     <span id="kpi-latencia"
                         style="font-weight:400; color:var(--text-muted,#64748b); margin-left:.5rem; font-size:.75rem;"></span>
                 </div>
@@ -182,6 +182,25 @@
                 options: {
                     plugins: { legend: { display: false } },
                     scales: { y: { beginAtZero: true, ticks: { precision: 0 } } },
+                    responsive: true,
+                    maintainAspectRatio: true,
+                }
+            });
+        }
+
+        function _makeLineChart(canvasId, labels, data, color) {
+            _destroyChart(canvasId);
+            const ctx = document.getElementById(canvasId);
+            if (!ctx) return;
+            _charts[canvasId] = new Chart(ctx, {
+                type: 'line',
+                data: {
+                    labels,
+                    datasets: [{ data, borderColor: color || CHART_COLORS[0], fill: false, tension: 0.3 }]
+                },
+                options: {
+                    plugins: { legend: { display: false } },
+                    scales: { y: { beginAtZero: true } },
                     responsive: true,
                     maintainAspectRatio: true,
                 }
@@ -240,7 +259,8 @@
                 _makeDoughnutChart('chart-mesas', mesas.labels, mesas.data);
                 _makeBarChart('chart-complejidad', complejidad.labels, complejidad.data);
                 _makeDoughnutChart('chart-niveles', niveles.labels, niveles.data);
-                _makeBarChart('chart-tiempo', tiempo.labels, tiempo.data, '#1a6bbf');
+                // tiempo ahora es una línea de tendencia producto vs horas
+                _makeLineChart('chart-tiempo', tiempo.labels, tiempo.data, '#1a6bbf');
 
             } catch (e) {
                 errEl.textContent = 'Dashboard no disponible: ' + e.message + '. ¿Está levantado agente-dashboard?';
@@ -250,8 +270,41 @@
 
         // Carga automática al abrir la página
         document.addEventListener('DOMContentLoaded', () => {
+            fetch('http://localhost:5678/webhook/metricas').catch(e => console.log('Ping al webhook métricas:', e));
             setTimeout(cargarDashboard, 800);
+            conectarWebSocket();
         });
+
+        // ── WebSocket ─────────────────────────────────────────────────────────────
+        function conectarWebSocket() {
+            // Si API es algo como "http://localhost:8006", convierte http -> ws
+            const wsProto = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
+            let wsUrl;
+            if (API) {
+                wsUrl = API.replace(/^https?/, wsProto) + '/ws';
+            } else {
+                wsUrl = wsProto + '//' + window.location.host + '/ws';
+            }
+
+            const ws = new WebSocket(wsUrl);
+
+            ws.onmessage = function (event) {
+                if (event.data === "refresh") {
+                    console.log("WebSocket dice: refresh! Actualizando dashboard...");
+                    cargarDashboard();
+                }
+            };
+
+            ws.onclose = function (e) {
+                console.log('WebSocket cerrado. Intentando reconectar en 3 segundos...', e.reason);
+                setTimeout(conectarWebSocket, 3000);
+            };
+
+            ws.onerror = function (err) {
+                console.error('Error WebSocket:', err);
+                ws.close();
+            };
+        }
     </script>
 </body>
 
