actualizacion fronted y correos permitidos

--- a/proyecto/frontend/index.html
+++ b/proyecto/frontend/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sistema de Derivación de Tickets — Protecta Seguros</title>
+  <title>Sistema de Derivación de Tickets</title>
   <meta name="description"
-    content="Sistema inteligente de derivación y clasificación de tickets de soporte — Protecta Seguros" />
+    content="Sistema inteligente de derivación y clasificación de tickets de soporte" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
@@ -40,7 +40,7 @@
         <line x1="12" y1="8" x2="12" y2="12" />
         <line x1="12" y1="16" x2="12.01" y2="16" />
       </svg>
-      <span>Protecta Seguros · Service Desk · Orquestado vía n8n</span>
+      <span>Service Desk · Orquestado vía n8n</span>
     </div>
     <div style="display:flex; align-items:center; gap:.5rem;">
       <!-- Botón Dashboard (nueva vista) -->
