estimador: nuevo modelo v4 sin features temporales + clasificacion corregida

--- a/proyecto/frontend/index.html
+++ b/proyecto/frontend/index.html
@@ -94,6 +94,16 @@
               <option value="">Seleccionar...</option>
               <option value="Incidente">Incidente</option>
               <option value="Solicitud">Solicitud</option>
+              <option value="Requerimiento">Requerimiento</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label>Clasificación <span class="required">*</span></label>
+            <select id="clasificacion" required>
+              <option value="">Seleccionar...</option>
+              <option value="Incidencia (error)">Incidencia (error)</option>
+              <option value="Solicitud">Solicitud</option>
+              <option value="Requerimiento (nueva funcionalidad)">Requerimiento (nueva funcionalidad)</option>
             </select>
           </div>
           <div class="form-group">
@@ -289,15 +299,14 @@
             <label>Área <span class="required">*</span></label>
             <select id="area" required>
               <option value="">Seleccionar...</option>
-              <option>Analatica y Actuarial</option>
+              <option>Analítica y Actuarial</option>
               <option>Cobranzas</option>
-              <option>Operaciones</option>
               <option>Comercial Masivos</option>
               <option>Contabilidad</option>
               <option>Cultura Organizacional</option>
               <option>Marketing</option>
               <option>Operaciones</option>
-              <option>Recepcion</option>
+              <option>Recepción</option>
               <option>Riesgos Operacionales</option>
               <option>Servicio al Cliente</option>
               <option>Siniestros</option>
@@ -315,7 +324,7 @@
               <option>SCTR</option>
               <option>Accidentes Personales</option>
               <option>Vida Grupo</option>
-              <option>Otro</option>
+              <option>Otros</option>
             </select>
           </div>
         </div>
