--- a/proyecto/frontend/index.html
+++ b/proyecto/frontend/index.html
@@ -98,15 +98,6 @@
             </select>
           </div>
           <div class="form-group">
-            <label>Clasificación <span class="required">*</span></label>
-            <select id="clasificacion" required>
-              <option value="">Seleccionar...</option>
-              <option value="Incidencia (error)">Incidencia (error)</option>
-              <option value="Solicitud">Solicitud</option>
-              <option value="Requerimiento (nueva funcionalidad)">Requerimiento (nueva funcionalidad)</option>
-            </select>
-          </div>
-          <div class="form-group">
             <label>Tipo de Atención SD <span class="required">*</span></label>
             <!-- Select original (fuente de datos), oculto en la UI -->
             <select id="tipo_atencion_sd" required style="display:none;">
@@ -389,10 +380,15 @@
             <input id="cantidad_afectados" type="number" min="1" value="1" />
           </div>
           <div class="form-group" style="display:flex; align-items:flex-end;">
-            <label class="checkbox-row" style="width:100%; margin:0; cursor:pointer;">
-              <input type="checkbox" id="impacta_al_cierre" />
-              <span style="font-size:.82rem; color:var(--text); font-weight:400;">Impacta al cierre contable</span>
-            </label>
+            <button type="button" id="btn-impacta" class="toggle-btn">
+              <svg id="impacta-icon" viewBox="0 0 24 24" width="15" height="15" fill="none"
+                   stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="3" y="11" width="18" height="11" rx="2" ry="2"/>
+                <path d="M7 11V7a5 5 0 0 1 10 0v4"/>
+              </svg>
+              <span id="impacta-label">Impacta al cierre contable</span>
+            </button>
+            <input type="hidden" id="impacta_al_cierre" value="false" />
           </div>
         </div>
 
